# paperext

./: .gitignore  .korbitignore  LICENSE.txt  README.md  README.rst  config.ai4hcat.ini  config.ini  config.mdl.ini  out  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: .gitignore  ai4h_categorization.csv  categorized_datasets.json  categorized_domains.json  categorized_models.json  non_categorized_domains.json  non_categorized_models.json  profs_2025-01-22.csv  validation_set.txt
data/analysis/: all_research_fields_00.csv  all_research_fields_01.csv  datasets.field_00.csv  datasets.field_01.csv  datasets.mode_00.csv  datasets.mode_01.csv  datasets.mode_and_role_00.csv  datasets.mode_and_role_01.csv  datasets.name_00.csv  datasets.name_01.csv  datasets.role_00.csv  datasets.role_01.csv  libraries.field_00.csv  libraries.field_01.csv  libraries.mode_00.csv  libraries.mode_01.csv  libraries.mode_and_role_00.csv  libraries.mode_and_role_01.csv  libraries.name_00.csv  libraries.name_01.csv  libraries.role_00.csv  libraries.role_01.csv  models.field_00.csv  models.field_01.csv  models.mode_00.csv  models.mode_01.csv  models.mode_and_role_00.csv  models.mode_and_role_01.csv  models.name_00.csv  models.name_01.csv  models.role_00.csv  models.role_01.csv  primary_research_field_00.csv  primary_research_field_01.csv  research_field_00.csv  research_field_01.csv  sub_research_field_00.csv  sub_research_field_01.csv  sub_research_fields_00.csv  sub_research_fields_01.csv  (+4 more)
data/analysis/openai/: all_research_fields_00.csv  all_research_fields_01.csv  datasets.category_01.csv  datasets.name_00.csv  datasets.name_01.csv  datasets.role_01.csv  libraries.category_01.csv  libraries.mode_and_role_00.csv  libraries.name_00.csv  libraries.name_01.csv  models.category_00.csv  models.mode_and_role_01.csv  models.name_00.csv  models.role_00.csv  primary_research_field_00.csv  primary_research_field_01.csv  sub_research_fields_00.csv  title_00.csv  title_01.csv  type_00.csv
data/analysis/vertexai/: all_research_fields_00.csv  libraries.field_00.csv  models.field_00.csv
data/mdl/merged/: 1910.00760.yaml  1910.02344.yaml  1910.08650.yaml  1910.13249.yaml  1910.13466.yaml  1911.05873.yaml  2111.14336.yaml  2112.14450.yaml  2205.08830.yaml  2210.15837.yaml  2301.06624.yaml  2301.09257.yaml  2302.09852.yaml  2303.03915.yaml  2304.14082.yaml  2305.11856.yaml  2305.16397.yaml  2305.17589.yaml  2305.18283.yaml  2305.19452.yaml  2306.00720.yaml  2306.07179.yaml  2306.11128.yaml  2306.14808.yaml  2306.15115.yaml  2307.01163.yaml  2307.05769.yaml  2307.08863.yaml  2307.14512.yaml  2308.04268.yaml  2308.05741.yaml  2308.12438.yaml  2308.12445.yaml  2309.02550.yaml  2309.03839.yaml  2309.04836.yaml  2309.06497.yaml  2309.10954.yaml  2309.12508.yaml  2309.17388.yaml  (+35 more)
data/merged/: 1910.00760.json  1910.00760.yaml  1910.02344.yaml  1910.08650.json  1910.08650.yaml  1910.13249.json  1910.13249.yaml  1910.13466.json  1910.13466.yaml  1911.05873.yaml  1912.09867.yaml  2108.11107.yaml  2205.08830.json  2205.08830.yaml  2212.06079.yaml  2301.06230.yaml  2301.06624.json  2301.06624.yaml  2301.09257.yaml  2302.09852.json  2302.09852.yaml  2303.03915.json  2303.03915.yaml  2304.14082.json  2304.14082.yaml  2305.11856.json  2305.11856.yaml  2305.11938.json  2305.11938.yaml  2305.14621.yaml  2305.16338.yaml  2305.16397.json  2305.16397.yaml  2305.17589.yaml  2305.18283.json  2305.18283.yaml  2305.19452.json  2305.19452.yaml  2306.00720.json  2306.00720.yaml  (+124 more)
data/queries/: -eid7uct1My_00.json  04K3PMtMckp_00.json  0LabBZa3tV_00.json  1901.07186_00.json  1906.05433_00.json  1910.00760_00.json  1910.00760_01.json  1910.02344_00.json  1910.02344_01.json  1910.06452_00.json  1910.08650_00.json  1910.08650_01.json  1910.13249_00.json  1910.13249_01.json  1910.13466_00.json  1910.13466_01.json  1911.05873_00.json  1911.05873_01.json  1911.09207_00.json  1912.09867_00.json  1912.09867_01.json  1sxiBaGEtg_00.json  2004.11292_00.json  2101.11353_00.json  2102.08501_00.json  2108.03827_00.json  2108.11107_00.json  2108.11107_01.json  2109.03357_00.json  2109.03975_00.json  2110.02355_00.json  2110.15137_00.json  2111.14336_00.json  2111.14336_01.json  2112.09153_00.json  2112.14450_00.json  2112.14450_01.json  2112.15277_00.json  2201.11986_00.json  2202.01334_00.json  (+691 more)
data/queries/openai/: -kAWfaLkPT3_00.json  (+997 more)
llm_paper_extract/: __init__.py  analyse.py  analysis.py  build_datasets_tree.py  build_domains_tree.py  build_models_tree.py  download_convert.py  merge_papers.py  model.py  parse_validation_errors.py  query.py  stats.py  utils.py
llm_paper_extract/models/: convert.py  dataset_category.py  model.py  model_category.py  model_v1.py  model_v2.py  utils.py
paperoni/: .gitignore
scripts/: categorize_papers.sh  extract_papers.sh  fetch_prof_empirical_papers.py  list_prof_empirical_papers.py  list_students_per_prof_papers.py
src/paperext/: __about__.py  __init__.py  analysis.py  config.py  download_convert.py  evaluate.py  log.py  measure.py  merge_papers.py  parse_validation_errors.py  perf_analysis.py  query.py  utils.py
tests/: __init__.py  config.ini  conftest.py  test_config.py  test_merge_papers.py  test_query.py  test_utils.py
tests/models/: test_convert.py
tests/structured_output/: test_structured_output.py
tests/test_utils/: test_build_validation_set.yml
(+1411 files in other folders)
