[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperext"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Satya Ortiz-Gagne", email = "satya.ortiz-gagne@mila.quebec" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "instructor",
  "mlcm",
  "pandas",
  "pydantic",
  "pyyaml",
  "scikit-learn",
  "tiktoken",
]
[project.optional-dependencies]
openai = [
  "openai",
]
vertexai = [
  "instructor[vertexai]",
]

[project.urls]
Documentation = "https://github.com/satyaog/paperext#readme"
Issues = "https://github.com/satyaog/paperext/issues"
Source = "https://github.com/satyaog/paperext"

[project.scripts]
paperoni-report = "paperext.paperoni.report:main"
download-convert = "paperext.download_convert:main"
query = "paperext.query:main"
parse-validation-errors = "paperext.parse_validation_errors:main"
merge-papers = "paperext.merge_papers:main"
perf-analysis = "paperext.perf_analysis:main"

[tool.hatch.version]
path = "src/paperext/__about__.py"

[tool.hatch.envs.default]
python = "3.10"
installer = "uv"

[tool.hatch.envs.default.env-vars]
PAPEREXT_CFG = "{env:PAPEREXT_CFG:{root:real}/config.mdl.ini}"
# linux seams to require the following to avoid
# ImportError: cannot import name '_message' from 'google.protobuf.pyext'
PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION = "upb"

[tool.hatch.envs.openai]
extra-dependencies = [
  "paperext[openai]",
]

[tool.hatch.envs.vertexai]
extra-dependencies = [
  "paperext[vertexai]",
]

[tool.hatch.envs.paperoni]
detached = true
dependencies = [
  "paperoni @ git+https://github.com/mila-iqia/paperoni@deploy-2024-12-06",
]

[tool.hatch.envs.tests]
extra-dependencies = [
  "paperext[openai]",
  "paperext[vertexai]",
  "pytest",
  "pytest-regressions",
]
[tool.hatch.envs.tests.scripts]
tests = "pytest tests {args}"

[tool.hatch.envs.docs]
[tool.hatch.envs.docs.scripts]
print-help = [
  "download-convert --help",
  "query --help",
  "parse-validation-errors --help",
  "merge-papers --help",
  "perf-analysis --help",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/paperext tests}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black",
  "isort",
]
[tool.hatch.envs.lint.scripts]
lint = [
  "python3 -m black {args} .",
  "python3 -m isort --profile black {args} .",
]

[tool.coverage.run]
source_pkgs = ["paperext", "tests"]
branch = true
parallel = true
omit = [
  "src/paperext/__about__.py",
]

[tool.coverage.paths]
paperext = ["src/paperext", "*/paperext/src/paperext"]
tests = ["tests", "*/paperext/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
